force-app/main/default/objects/Batch__c/Batch__c.object-meta.xml
<CustomObject>
    <label>Batch</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>No of batches</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>