force-app/main/default/objects/Batch__c/fields/BatchStartDate__c.field-meta.xml
<CustomField>
    <fullName>BatchStartDate__c</fullName>
    <label>BatchStartDate</label>
    <type>Date</type>
</CustomField>