force-app/main/default/objects/Batch__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <formula>Faculty__r.Experience__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>