force-app/main/default/objects/Batch__c/fields/FacultyDetails__c.field-meta.xml
<CustomField>
    <fullName>FacultyDetails__c</fullName>
    <formula>Faculty__r.Name</formula>
    <label>FacultyDetails</label>
    <type>Text</type>
</CustomField>